--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -360,7 +360,7 @@ add-document=Afegeix un document
 add-document-type=Afegeix un tipus de document
 add-domain=Afegeix un domini
 add-draft=Afegeix esborrany
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Afegeix elements
 add-event=Afegeix un esdeveniment
 add-existing-account=Afegeix un compte existent
@@ -7314,7 +7314,7 @@ remoteIPInfo=IP remota
 remove-access=Suprimeix l'accés
 remove-all-items=Suprimeix tots els articles
 remove-all-registered-fido2-authenticators=Suprimeix tots els autenticadors FIDO2 registrats
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Suprimeix els articles de revista caducats.
 remove-favorite=Suprimeix el favorit
 remove-field=Suprimeix el camp
