--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -360,7 +360,7 @@ add-document=Dokument hinzufügen
 add-document-type=Dokumententyp hinzufügen
 add-domain=Domain hinzufügen
 add-draft=Entwurf hinzufügen
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Elemente hinzufügen
 add-event=Ereignis hinzufügen
 add-existing-account=Vorhandenes Konto hinzufügen
@@ -7314,7 +7314,7 @@ remoteIPInfo=Remote-IP
 remove-access=Zugriff entfernen
 remove-all-items=Alle Artikel entfernen
 remove-all-registered-fido2-authenticators=Alle registrierten FIDO2-Authentifikatoren entfernen
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Abgelaufene Web Content Artikel entfernen.
 remove-favorite=Favorit entfernen
 remove-field=Feld entfernen
