--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -360,7 +360,7 @@ add-document=Lisa dokument
 add-document-type=Dokumendi nimi
 add-domain=Domeeni lisamine (Automatic Translation)
 add-draft=Mustandi lisamine (Automatic Translation)
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Elementide lisamine (Automatic Translation)
 add-event=Lisa sündmus
 add-existing-account=Lisa olemasolev konto (Automatic Translation)
@@ -7314,7 +7314,7 @@ remoteIPInfo=Kaug-IP (Automatic Translation)
 remove-access=Eemalda juurdepääs (Automatic Translation)
 remove-all-items=Eemalda kõik üksused (Automatic Translation)
 remove-all-registered-fido2-authenticators=Eemalda kõik registreeritud FIDO2 autendijad (Automatic Translation)
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Aegunud tööleheartiklite eemaldamine. (Automatic Translation)
 remove-favorite=Eemalda lemmik (Automatic Translation)
 remove-field=Eemalda väli (Automatic Translation)
