--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -360,7 +360,7 @@ add-document=डॉक्युमेंट जोड़े
 add-document-type=दस्तावेज़ का नाम
 add-domain=डोमेन जोड़ें
 add-draft=ड्राफ्ट जोड़ें (Automatic Translation)
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=एलिमेंट्स जोड़ें (Automatic Translation)
 add-event=Event जोड़े
 add-existing-account=मौजूदा खाता जोड़ें
@@ -7314,7 +7314,7 @@ remoteIPInfo=रिमोट आईपी (Automatic Translation)
 remove-access=एक्सेस निकालें (Automatic Translation)
 remove-all-items=सभी आइटम निकालें (Automatic Translation)
 remove-all-registered-fido2-authenticators=सभी पंजीकृत FIDO2 प्रमाणक निकालें (Automatic Translation)
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=समाप्त हो चुके जर्नल लेख निकालें. (Automatic Translation)
 remove-favorite=पसंदीदा निकालें (Automatic Translation)
 remove-field=फ़ील्ड निकालें (Automatic Translation)
