--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -360,7 +360,7 @@ add-document=Dokumentum hozzáadása
 add-document-type=Dokumentumtípus hozzáadása
 add-domain=Tartomány hozzáadása
 add-draft=Vázlat hozzáadása
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Elemek hozzáadása
 add-event=Új esemény
 add-existing-account=Meglévő fiók hozzáadása
@@ -7314,7 +7314,7 @@ remoteIPInfo=Távoli IP
 remove-access=Hozzáférés megszüntetése
 remove-all-items=Összes elem eltávolítása
 remove-all-registered-fido2-authenticators=Összes regisztrált FIDO2 hitelesítő eltávolítása
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Lejárt újságcikkek eltávolítása.
 remove-favorite=Kedvenc eltávolítása
 remove-field=Mező eltávolítása
