--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -360,7 +360,7 @@ add-document=הוסף מסמך
 add-document-type=הוסף סוג מסמך
 add-domain=הוספת תחום (Automatic Translation)
 add-draft=הוסף טיוטה
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=הוספת רכיבים (Automatic Translation)
 add-event=הוסף אירוע
 add-existing-account=הוסף חשבון קיים (Automatic Translation)
@@ -7314,7 +7314,7 @@ remoteIPInfo=IP מרוחק
 remove-access=הסר גישה
 remove-all-items=הסר את כל הפריטים (Automatic Translation)
 remove-all-registered-fido2-authenticators=הסר את כל מאמתי FIDO2 הרשומים (Automatic Translation)
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=הסר מאמרי יומן שפג תוקפם. (Automatic Translation)
 remove-favorite=הסר מועדף
 remove-field=הסר שדה
