--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -360,7 +360,7 @@ add-document=ドキュメントの追加
 add-document-type=ドキュメントタイプの追加
 add-domain=ドメインを追加
 add-draft=下書きを追加
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=要素を追加
 add-event=イベントの追加
 add-existing-account=既存のアカウントを追加
@@ -7314,7 +7314,7 @@ remoteIPInfo=リモート IP
 remove-access=アクセス権限の削除
 remove-all-items=すべての項目を削除
 remove-all-registered-fido2-authenticators=すべての登録済みFIDO2認証器を削除
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=期限切れの記事を削除します。
 remove-favorite=お気に入りを削除
 remove-field=フィールドの削除
