--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -360,7 +360,7 @@ add-document=문서를 추가하십시요
 add-document-type=문서 이름
 add-domain=도메인 추가 (Automatic Translation)
 add-draft=초안 추가 (Automatic Translation)
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=요소 추가 (Automatic Translation)
 add-event=사건을 추가하십시요
 add-existing-account=기존 계정 추가 (Automatic Translation)
@@ -7314,7 +7314,7 @@ remoteIPInfo=원격 IP (Automatic Translation)
 remove-access=액세스 제거 (Automatic Translation)
 remove-all-items=모든 항목 제거 (Automatic Translation)
 remove-all-registered-fido2-authenticators=등록된 모든 FIDO2 인증자 제거 (Automatic Translation)
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=만료된 저널 아티클을 제거합니다. (Automatic Translation)
 remove-favorite=즐겨찾기 제거 (Automatic Translation)
 remove-field=필드 제거 (Automatic Translation)
