--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -360,7 +360,7 @@ add-document=Tambah Dokumen (Automatic Translation)
 add-document-type=Tambah Jenis Dokumen (Automatic Translation)
 add-domain=Tambah Domain (Automatic Translation)
 add-draft=Tambah Draf (Automatic Translation)
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Tambah Elemen (Automatic Translation)
 add-event=Tambah Peristiwa (Automatic Translation)
 add-existing-account=Tambah Akaun Sedia Ada (Automatic Translation)
@@ -7314,7 +7314,7 @@ remoteIPInfo=IP jauh (Automatic Translation)
 remove-access=Alih Keluar Capaian (Automatic Translation)
 remove-all-items=Alih Keluar Semua Item (Automatic Translation)
 remove-all-registered-fido2-authenticators=Alih Keluar Semua Pengesah FIDO2 Berdaftar (Automatic Translation)
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Keluarkan artikel jurnal yang telah tamat tempoh. (Automatic Translation)
 remove-favorite=Alih Keluar Kegemaran (Automatic Translation)
 remove-field=Alih Keluar Medan (Automatic Translation)
