--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -360,7 +360,7 @@ add-document=Document toevoegen
 add-document-type=Documenttype toevoegen
 add-domain=Domein toevoegen
 add-draft=Concept toevoegen
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Elementen toevoegen
 add-event=Gebeurtenis toevoegen
 add-existing-account=Bestaand account toevoegen
@@ -7314,7 +7314,7 @@ remoteIPInfo=Extern IP-adres
 remove-access=Toegang Verwijderen
 remove-all-items=Alle items verwijderen
 remove-all-registered-fido2-authenticators=Alle geregistreerde FIDO2-authenticators verwijderen
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Verwijder verlopen logboekartikels.
 remove-favorite=Favoriet verwijderen
 remove-field=Veld verwijderen
