--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -360,7 +360,7 @@ add-document=Adicionar documento
 add-document-type=Adicionar Tipo de Documento
 add-domain=Adicionar domínio
 add-draft=Adicionar rascunho
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Adicionar elementos
 add-event=Adicionar Evento
 add-existing-account=Adicionar conta existente
@@ -7314,7 +7314,7 @@ remoteIPInfo=IP remoto
 remove-access=Remover Acesso
 remove-all-items=Remover todos os termos
 remove-all-registered-fido2-authenticators=Remover todos os autenticadores FIDO2 registrados
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Remover artigos vencidos.
 remove-favorite=Remover favorito
 remove-field=Remover campo
