--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -360,7 +360,7 @@ add-document=Pridať dokument
 add-document-type=Pridať typ dokumentu
 add-domain=Pridať doménu (Automatic Translation)
 add-draft=Pridať koncept (Automatic Translation)
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Pridať prvky (Automatic Translation)
 add-event=Pridať udalosť
 add-existing-account=Pridať existujúce konto (Automatic Translation)
@@ -7314,7 +7314,7 @@ remoteIPInfo=Vzdialená IP adresa (Automatic Translation)
 remove-access=Odstrániť prístup (Automatic Translation)
 remove-all-items=Odstrániť všetky položky (Automatic Translation)
 remove-all-registered-fido2-authenticators=Odstrániť všetky registrované FIDO2 overovateľov (Automatic Translation)
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Odstránenie článkov denníka s uplynutou platnosťou. (Automatic Translation)
 remove-favorite=Odstrániť obľúbenú položku (Automatic Translation)
 remove-field=Odstrániť pole (Automatic Translation)
