--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -360,7 +360,7 @@ add-document=Lägg till dokument
 add-document-type=Lägg till dokumenttyp
 add-domain=Lägg till domän
 add-draft=Lägg till utkast
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Lägg till element
 add-event=Lägg till händelse
 add-existing-account=Lägg till befintligt konto
@@ -7314,7 +7314,7 @@ remoteIPInfo=Fjärr-IP
 remove-access=Ta bort åtkomst
 remove-all-items=Ta bort alla varor
 remove-all-registered-fido2-authenticators=Ta bort alla registrerade FIDO2-autentiserare
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Ta bort förfallna journalartiklar.
 remove-favorite=Ta bort favorit
 remove-field=Ta bort fältet
