--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -360,7 +360,7 @@ add-document=ஆவணத்தை இணைக்க
 add-document-type=Document Type இணைக்க
 add-domain=களத்தைச் சேர்
 add-draft=Add Draft (Automatic Copy)
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=கூறுகளைச் சேர்
 add-event=நிகழ்ச்சியை சேர்
 add-existing-account=Add Existing Account (Automatic Copy)
@@ -7314,7 +7314,7 @@ remoteIPInfo=ரிமோட் ஐபி
 remove-access=Access-ஐ நீக்கு
 remove-all-items=Remove All Items (Automatic Copy)
 remove-all-registered-fido2-authenticators=Remove All Registered FIDO2 Authenticators (Automatic Copy)
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Remove expired journal articles. (Automatic Copy)
 remove-favorite=பிடித்தவைகளை அகற்று
 remove-field=புலம் நீக்கு
