--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -360,7 +360,7 @@ add-document=เพิ่มเอกสาร
 add-document-type=เพิ่มประเภทเอกสาร
 add-domain=เพิ่มโดเมน (Automatic Translation)
 add-draft=เพิ่มแบบร่าง (Automatic Translation)
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=เพิ่มองค์ประกอบ
 add-event=เพิ่มเหตุการณ์ (Automatic Translation)
 add-existing-account=เพิ่มบัญชีที่มีอยู่ (Automatic Translation)
@@ -7314,7 +7314,7 @@ remoteIPInfo=IP ระยะไกล (Automatic Translation)
 remove-access=เอาการเข้าถึงออก (Automatic Translation)
 remove-all-items=เอารายการทั้งหมดออก (Automatic Translation)
 remove-all-registered-fido2-authenticators=ลบตัวรับรองความถูกต้อง FIDO2 ที่ลงทะเบียนไว้ทั้งหมด (Automatic Translation)
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=ลบบทความสมุดรายวันที่หมดอายุออก (Automatic Translation)
 remove-favorite=ลบรายการโปรด
 remove-field=ลบฟิลด์
