--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -360,7 +360,7 @@ add-document=添加文档
 add-document-type=添加文档类型
 add-domain=添加域
 add-draft=添加草稿
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=添加元素
 add-event=添加事件
 add-existing-account=添加现有帐户
@@ -7314,7 +7314,7 @@ remoteIPInfo=远程 IP
 remove-access=移除访问权限
 remove-all-items=移除所有条目
 remove-all-registered-fido2-authenticators=移除注册的所有 FIDO2 身份验证器
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=移除已过期的文章。
 remove-favorite=移除收藏
 remove-field=移除字段
