--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -360,7 +360,7 @@ add-document=Gehitu dokumentua
 add-document-type=Dokumentu Mota Gehitu
 add-domain=Add Domain (Automatic Copy)
 add-draft=Add Draft (Automatic Copy)
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Elementuak gehitu
 add-event=Gehitu gertakaria
 add-existing-account=Add Existing Account (Automatic Copy)
@@ -7314,7 +7314,7 @@ remoteIPInfo=Remote IP (Automatic Copy)
 remove-access=Remove Access (Automatic Copy)
 remove-all-items=Remove All Items (Automatic Copy)
 remove-all-registered-fido2-authenticators=Remove All Registered FIDO2 Authenticators (Automatic Copy)
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Kendu iraungitako artikuluak.
 remove-favorite=Gogokoa kendu
 remove-field=Eremua ezabatu
