--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -360,7 +360,7 @@ add-document=Lisää asiakirja
 add-document-type=Lisää asiakirjatyyppi
 add-domain=Lisää Toimialue
 add-draft=Lisää Luonnos
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Lisää Elementit
 add-event=Lisää tapahtuma
 add-existing-account=Lisää Olemassa Oleva Tili
@@ -7314,7 +7314,7 @@ remoteIPInfo=Etä-IP
 remove-access=Poista Käyttöoikeus
 remove-all-items=Poista Kaikki Tuotteet
 remove-all-registered-fido2-authenticators=Poista Kaikki Rekisteröidyt FIDO2-todentajat
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Poista vanhentuneet journaaliartikkelit.
 remove-favorite=Poista Suosikki
 remove-field=Poista Kenttä
