--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -360,7 +360,7 @@ add-document=Adaugă Document
 add-document-type=Nume Document
 add-domain=Adăugare domeniu (Automatic Translation)
 add-draft=Adăugare schiță (Automatic Translation)
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Adăugare elemente (Automatic Translation)
 add-event=Adaugă Eveniment
 add-existing-account=Adăugare cont existent (Automatic Translation)
@@ -7314,7 +7314,7 @@ remoteIPInfo=IP la distanță (Automatic Translation)
 remove-access=Eliminare acces (Automatic Translation)
 remove-all-items=Eliminare totală elemente (Automatic Translation)
 remove-all-registered-fido2-authenticators=Eliminarea tuturor autentificatorilor FIDO2 înregistrați (Automatic Translation)
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Eliminați articolele din jurnal expirate. (Automatic Translation)
 remove-favorite=Eliminare preferință (Automatic Translation)
 remove-field=Eliminare câmp (Automatic Translation)
