--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -360,7 +360,7 @@ add-document=Добавити документ
 add-document-type=Назва документу
 add-domain=Додати домен (Automatic Translation)
 add-draft=Додати чернетку (Automatic Translation)
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=Додавання елементів (Automatic Translation)
 add-event=Добавити подію
 add-existing-account=Додати наявний обліковий запис (Automatic Translation)
@@ -7314,7 +7314,7 @@ remoteIPInfo=Віддалений IP (Automatic Translation)
 remove-access=Видалити доступ (Automatic Translation)
 remove-all-items=Видалити всі елементи (Automatic Translation)
 remove-all-registered-fido2-authenticators=Видалити всі зареєстровані автентифікатори FIDO2 (Automatic Translation)
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=Вилучити прострочені статті журналу. (Automatic Translation)
 remove-favorite=Видалити обране (Automatic Translation)
 remove-field=Видалити поле (Automatic Translation)
