--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -360,7 +360,7 @@ add-document=新增文件
 add-document-type=增加文件類型
 add-domain=新增網域
 add-draft=新增草稿
-add-duplicate-field=Add duplicate field {0} (Automatic Copy)
+add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
 add-elements=新增元素
 add-event=增加事件
 add-existing-account=新增現有的帳戶
@@ -4084,7 +4084,7 @@ home-page-url-help=提供您的應用程式首頁的 URL。
 home-page-url-is-invalid=此網站 URL 無效。
 home-page-url-scheme-is-invalid=此網站 URL 協定無效，只有 http 與 https 是允許的。
 home-url=首頁網址
-home-url-help=這是Liferay實例的首頁。例如，如果您希望首頁為http://localhost:8080/web/guest/home ，設定此至  /web/guest/home。
+home-url-help=這是Liferay實例的首頁。例如，如果您希望首頁為http://localhost:8080/web/guest/home ，設定此至 /web/guest/home。
 hook-plugins=Hook插件
 hostname=主機名稱或 IP 位址
 hours-abbreviation=h
@@ -7170,7 +7170,7 @@ recaptcha-no-script-url=reCAPTCHA No Script URL
 recaptcha-private-key=重啟碼以取得私密鑰
 recaptcha-public-key=重啟碼以取得公開鑰
 recaptcha-script-url=reCAPTCHA Script URL
-recaptcha-verify-url=reCAPTCHA  URL
+recaptcha-verify-url=reCAPTCHA URL
 receive-a-notification-when-document-has-expired-in-a-folder-you-are-subscribed-to=您訂閱的資料夾裡的文件已過期。
 receive-a-notification-when-review-is-needed-on-document-in-a-folder-you-are-subscribed-to=檢視您訂閱的資料夾裡的文件。
 receive-a-notification-when-someone=收到一個通知，當有人...
@@ -7314,7 +7314,7 @@ remoteIPInfo=遠端 IP
 remove-access=移除存取權限
 remove-all-items=移除所有項目
 remove-all-registered-fido2-authenticators=移除所有已註冊的 FIDO2 Authenticators
-remove-duplicate-field=Remove duplicate field {0} (Automatic Copy)
+remove-duplicate-field=Remove Duplicate Field {0} (Automatic Copy)
 remove-expired-journal-articles=移除已過期的網站內容文章。
 remove-favorite=移除收藏
 remove-field=移除欄位
